@@ -1,6 +1,7 @@
 Version 2.2.0
 ~~~~~~~~~~~~~
 * Post DiFX-2.1
+* vexpeek: --bands mode
 
 Version 2.1.0
 ~~~~~~~~~~~~~
